Fixes #1402 Dark mode for user edit popIn

--- a/admin/themes/clear/theme.css
+++ b/admin/themes/clear/theme.css
@@ -413,7 +413,7 @@ label>p.group_select {
 
 
 .UserListPopInContainer{
-  background-color:#f3f3f3;
+  background-color:white;
   border-radius:10px;
 
 }
